# msc-thesis

./: .gitmodules  README.md  pyproject.toml
analysis/: Adaptive Ratios.ipynb  Baseline.ipynb  Benchmark.ipynb  Data Augmentation.ipynb  Env Selection.ipynb  Final.ipynb  MPC.ipynb  Metrics.ipynb  PPO.ipynb  Paper Scores.ipynb  SAC.ipynb  Sanity Check.ipynb  Speedup Factors.ipynb  Split Ratios.ipynb  Warm Start.ipynb  loaders.py  utils.py
analysis/ref_scores/: baselines.json  bbf_scores.csv  bbf_stats.csv  dv2_scores.csv  dv2_stats.csv  dv3_scores.csv  dv3_v2_scores.csv  dv3_v2_stats.csv
dreamerx/: adaptive.py  config.py  config.yml  data.py  runner.py
dreamerx/common/: config.py  nets.py  plasticity.py  types.py
dreamerx/presets/: cem.yml  dreamer.yml  exp.yml  ppo.yml  sac.yml  util.yml
dreamerx/rl/: __init__.py  _alpha.py  _utils.py  a2c.py  cem.py  ppo.py  sac.py
dreamerx/wm/: __init__.py  _rssm.py  dreamer.py
exp/: baseline.py  baseline_ext.py  ent_sched.py  no_sticky.py  presets.yml  pretrain.py  pretrain_v2.py  sanity_check.py  sanity_check_rand.py  split_ratios.py  utils.py  warm_start.py  warm_start_actor.py
exp/adaptive_ratio/: v1_0.py  wm_v1_0.py
exp/data_aug/: sweep.py  v1.py  v2.py
exp/final/: benchmark.py  dreamerv2.py  prelim.py  prelim2.py
exp/mpc/: base.py
exp/ppo/: sweep.py
exp/sac/: alpha_search.py  base.py  ent_sched.py  (+4 more)
tex/: cite_hyper_fix.sty  other.bib  pracamgr.cls  thesis.aux  thesis.bbl  thesis.bbl-SAVE-ERROR  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.run.xml  thesis.tex  thesis.toc  zotero.bib
(+9 files in other folders)
