[tool.poetry]
name = "msc-thesis"
version = "0.1.0"
description = ""
authors = ["vitreusx <jakub_bednarz@protonmail.com>"]
readme = "README.md"
packages = [{ include = "dreamerx" }]

[tool.poetry.dependencies]
python = "^3.10"
rsrch = {path = "rsrch"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
